--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       - name: SET UP Python
         uses: actions/setup-python@v2
         with:
-          python-version: [3.8]
+          python-version: 3.8
       - name: Run Python command
         run: |
           pip install --upgrade pip
