--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,9 @@ jobs:
           python-version: 3.8
       - name: Run Python command
         run: |
-          pip install --upgrade pip
-          python3.8 -m venv env
+          sudo apt install -y python3-pip
+          sudo apt install -y python3-venv
+          python3 -m venv env
           source env/bin/activate
           pip install -r requirements.txt
           echo "virtual env:" $env
